force-app/main/default/objects/Partner_Agreement_Template__c/Partner_Agreement_Template__c.object-meta.xml
<CustomObject>
    <label>Partner Agreement Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Agreement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>