force-app/main/default/objects/Partner_Agreement_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This template is or can be used for partner agreement records.</description>
    <inlineHelpText>This template is or can be used for partner agreement records.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>