force-app/main/default/objects/Partner_Agreement_Template__c/fields/Active_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Active_As_Of__c</fullName>
    <label>Active As Of</label>
    <type>DateTime</type>
</CustomField>