force-app/main/default/objects/Partner_Agreement_Template__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Agreement</fullName>
                <default>true</default>
                <label>Partner Agreement</label>
            </value>
            <value>
                <fullName>Liability Waiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>