force-app/main/default/objects/Partner_Agreement_Template__c/fields/Before_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Before_Behalf_Of__c</fullName>
    <label>Before_Behalf_Of</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>