force-app/main/default/objects/Partner_Agreement_Template__c/fields/Behalf_Of_Example__c.field-meta.xml
<CustomField>
    <fullName>Behalf_Of_Example__c</fullName>
    <formula>&quot;I, &lt;b&gt;{{Partner_Agreement__c.Partner__r.Enrolled_By__r.FirstName}} {{Partner_Agreement__c.Partner__r.Enrolled_By__r.LastName}}&lt;/b&gt;, on behalf of &lt;b&gt; {{Partner_Agreement__c. Partner__r.Name}} \&quot;Agency\&quot;)&lt;/b&gt; &quot; &amp; Behalf_Of_Suffix__c</formula>
    <label>Behalf Of Example</label>
    <type>Text</type>
</CustomField>