force-app/main/default/objects/Partner_Agreement_Template__c/fields/Behalf_Of_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Behalf_Of_Suffix__c</fullName>
    <defaultValue>&quot;agree to the following terms and conditions:&quot;</defaultValue>
    <label>Behalf Of Suffix</label>
    <type>TextArea</type>
</CustomField>