force-app/main/default/objects/Partner_Agreement_Template__c/fields/Full_Title__c.field-meta.xml
<CustomField>
    <fullName>Full_Title__c</fullName>
    <formula>Year__c + &quot; &quot; +  Title__c</formula>
    <inlineHelpText>Full Title = Year + Title</inlineHelpText>
    <label>Full Title</label>
    <type>Text</type>
</CustomField>