force-app/main/default/objects/Partner_Agreement_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Title__c</columns>
    <columns>Active__c</columns>
    <columns>Active_As_Of__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>